--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,5 +11,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
     <center><div>Id Card Mahasiswa</div></center>
+    <hr />
+    <form method="post" action="/getData" enctype="multipart/form-data">
+            Nama Lengkap  : <input type="text" name="nama"> <br> <br>
+            Tanggal Lahir : <input type="date" name="lahir"> <br> <br>
+            Foto          : <input type="file" name="image"> <br><br>
+            <input type="submit" value="Send"> <br>
+    </form>
     </body>
 </html>
