membuat langkah menampilkan hasil submit nama, tanggal, dan foto

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <form method="post" action="/getData" enctype="multipart/form-data">
             Nama Lengkap  : <input type="text" name="nama"> <br> <br>
             Tanggal Lahir : <input type="date" name="lahir"> <br> <br>
-            Foto          : <input type="file" name="image"> <br><br>
+            Foto          : <input type="file" name="foto"> <br><br>
             <input type="submit" value="Send"> <br>
     </form>
     </body>
