--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-    <center><div>Id Card Mahasiswa</div></center>
+    <center><div>Insert Your Data</div></center>
     <hr />
     <form method="post" action="/getData" enctype="multipart/form-data">
             Nama Lengkap  : <input type="text" name="nama"> <br> <br>
